# GPI-Sandbox

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
.github/workflows/: goldens.yml  release.yml  sanitizers.yml  sdk_verify.yml
artifacts/: session-20251017-131717-frames.csv  session-20251017-131717-summary.json  session-20251017-131759-frames.csv  session-20251017-131759-summary.json  session-20251017-140156-frames.csv  session-20251017-140156-summary.json  session-20251017-142556-frames.csv  session-20251017-142556-summary.json  session-20251017-142748-frames.csv  session-20251017-142748-summary.json  session-20251017-145009-frames.csv  session-20251017-145009-summary.json  session-20251017-145017-frames.csv  session-20251017-145017-summary.json  session-20251017-145050-frames.csv  session-20251017-145050-summary.json  session-20251017-145144-frames.csv  session-20251017-145144-summary.json  session-20251017-145328-frames.csv  session-20251017-145328-summary.json  session-20251017-145732-frames.csv  session-20251017-145732-summary.json  session-20251017-145852-frames.csv  session-20251017-145852-summary.json  session-20251017-145933-frames.csv  session-20251017-145933-summary.json  session-20251017-150010-frames.csv  session-20251017-150010-summary.json  session-20251017-150123-frames.csv  session-20251017-150123-summary.json  session-20251017-150200-frames.csv  session-20251017-150200-summary.json  session-20251017-150228-frames.csv  session-20251017-150228-summary.json  session-20251017-155345-frames.csv  session-20251017-155345-summary.json  session-20251017-155650-frames.csv  session-20251017-155650-summary.json  session-20251017-162310-frames.csv  session-20251017-162310-summary.json  (+33 more)
artifacts/golden_pong_smoke_run/: report.json
child/: crash_report.h  crash_report_posix.cpp  crash_report_win.cpp  gpi_child_main.cpp
cmake/: Version.cmake
config/: settings.toml  trust.json
docs/: Doxyfile.in  README.md  abi_reference.md  architecture.md  quickstart.md
fuzz/: fuzz_gpi_frame.cpp
plugins/pong/: CMakeLists.txt  plugin_pong.plugin.json  pong.cpp
plugins/snake/: CMakeLists.txt  plugin_snake.plugin.json  snake.cpp
plugins/template/: CMakeLists.txt  plugin_template.cpp  plugin_template.plugin.json
scripts/: generate_sbom.sh  make_sdk.ps1  make_sdk.sh  package_linux.sh  package_mac.sh  package_win.ps1  run_demo.ps1  run_demo.sh
sdk/: CMakeLists.txt  README.md
sdk/include/gpi/: gpi_plugin.h
sdk_template/: CMakeLists.txt  README.md  plugin.manifest.json  plugin_example.cpp
src/: config.cpp  config.h  imgui_layer.cpp  imgui_layer.h  input.h  main.cpp  metrics.cpp  metrics.h  version.h.in
src/platform/: fs.cpp  fs.h  proc.cpp  proc.h  sandbox.h  sandbox_posix.cpp  sandbox_win.cpp  seccomp_linux.cpp
src/qa/: diff.cpp  diff.h  diff_ssim.cpp  diff_ssim.h  golden.cpp  golden.h
src/runtime/: child_shm.cpp  child_shm.h  drawlist_shm.cpp  drawlist_shm.h  plugin_loader.cpp  plugin_loader.h  plugin_runtime.cpp  plugin_runtime.h  runner.h  runner_child.cpp  runner_inproc.cpp  watchdog.cpp  watchdog.h
src/services/: artifacts.cpp  artifacts.h  log_bus.cpp  log_bus.h  metrics_detail.cpp  metrics_detail.h  replay.cpp  replay.h  save_store.cpp  save_store.h  screenshot.cpp  screenshot.h  telemetry.cpp  telemetry.h
src/store/: plugin_manifest.cpp  plugin_manifest.h
src/ui/: a11y.cpp  a11y.h  draw_prim.cpp  draw_prim.h  font_atlas.cpp  font_atlas.h  hud_perf.cpp  hud_perf.h  l10n.cpp  l10n.h  log_panel.cpp  log_panel.h  render_drawlist.cpp  render_drawlist.h  store_panel.cpp  store_panel.h  toast.cpp  toast.h
testdata/goldens/pong_smoke/: meta.json
